[gd_scene load_steps=13 format=3 uid="uid://c8j2qneyiwkhy"]

[ext_resource type="Texture2D" uid="uid://b8voe6odvmhn5" path="res://scenes/game_object/experience_vial/experience_vial.png" id="1_d72hl"]
[ext_resource type="Script" uid="uid://bcjoj8gs1o0l6" path="res://scenes/game_object/experience_vial/experience_vial.gd" id="1_iipyn"]
[ext_resource type="PackedScene" uid="uid://bh478361trp2r" path="res://scenes/component/random_audio_stream_player_2d_component.tscn" id="2_tpb62"]
[ext_resource type="AudioStream" uid="uid://bynum3obom3gc" path="res://assets/audio/drop_001.ogg" id="3_jtaqn"]
[ext_resource type="AudioStream" uid="uid://0n02txoakffv" path="res://assets/audio/drop_004.ogg" id="4_jrof2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xs8ts"]
radius = 16.0

[sub_resource type="Animation" id="Animation_tfr8w"]
resource_name = "flame_velocity"
length = 8.0
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flame:process_material:initial_velocity_min")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 20.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flame:process_material:initial_velocity_max")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 40.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Flame:process_material:scale_min")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.05, 0.1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Flame:process_material:scale_max")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.3, 1.5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5yw8b"]
_data = {
&"flame_velocity": SubResource("Animation_tfr8w")
}

[sub_resource type="Gradient" id="Gradient_bfrak"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_v4vpk"]
gradient = SubResource("Gradient_bfrak")
width = 4
height = 4

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_j5vtr"]
resource_local_to_scene = true
direction = Vector3(0, -1, 0)
spread = 30.0
gravity = Vector3(0, 0, 0)
scale_min = 0.05
scale_max = 0.3

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_kt8dq"]
direction = Vector3(0, -1, 0)
initial_velocity_min = 20.0
initial_velocity_max = 40.0
gravity = Vector3(0, 0, 0)
scale_min = 0.4
scale_max = 0.8
color = Color(0.4, 0.8, 1, 1)

[node name="ExperienceVial" type="Node2D"]
script = ExtResource("1_iipyn")

[node name="ExpireTimer" type="Timer" parent="."]
one_shot = true

[node name="RandomAudioStreamPlayer2DComponent" parent="." instance=ExtResource("2_tpb62")]
scale = Vector2(0.984781, 1.04643)
max_distance = 300.0
streams = Array[AudioStream]([ExtResource("3_jtaqn"), ExtResource("4_jrof2")])

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource("CircleShape2D_xs8ts")
debug_color = Color(1.15158e-07, 0.635899, 0.411579, 0.42)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_5yw8b")
}
autoplay = "flame_velocity"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_d72hl")

[node name="Flame" type="GPUParticles2D" parent="."]
z_index = 1
position = Vector2(0, 7)
amount = 18
texture = SubResource("GradientTexture2D_v4vpk")
lifetime = 0.4
process_material = SubResource("ParticleProcessMaterial_j5vtr")

[node name="BurnParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 16
lifetime = 0.5
one_shot = true
explosiveness = 0.8
process_material = SubResource("ParticleProcessMaterial_kt8dq")
